firefox 3.6 question layout issue

--- a/public/stylesheets/sass/scenarios.sass
+++ b/public/stylesheets/sass/scenarios.sass
@@ -64,10 +64,6 @@ body#scenarios_new, body#scenarios_create
           clear: both
           label
             font-weight: normal
-            .text
-              float: right
-              width: 100%
-              margin-bottom: 15px
             &:hover
               color: #FF7F00
               cursor: pointer            
